<resources>
    <string name="app_name">RegaPasswordManagerFOSS</string>
    <string name="user_hint">Usuario: </string>
    <string name="password_hint">Contraseña: </string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="new_user_sign">Usuario creado</string>
    <string name="logged_in">Sesión iniciada</string>
    <string name="empty_username">Introduce un nombre de usuario</string>
    <string name="empty_password">Introduce una contraseña válida</string>
    <string name="add_new_log">Añadir</string>
    <string name="web_app_hint">Nombre de la App o Web</string>
    <string name="empty_web_app_name">Introduce el nombre de la web/app</string>
    <string name="update_log_btn">Actualizar</string>
    <string name="index">Índice</string>
    <string name="app_logs">Cuentas en Apps</string>
    <string name="web_logs">Cuentas en Webs</string>
    <string name="added_user">Añadido nuevo usuario:</string>
    <string name="log_as_user">Iniciado sesión como:</string>

</resources>